<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".song.SongFragment">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/error_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <TextView
            android:id="@+id/error_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/error_placeholder"
            android:textColor="@color/colorAccentLight"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/guide_half"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <FrameLayout
            android:id="@+id/retry_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_box_bg"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_half"
            app:layout_constraintWidth_percent="0.5">

            <Button
                android:id="@+id/error_retry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:text="@string/retry" />

        </FrameLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_half"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/album_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/album_art"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/search_box_bg"
                android:padding="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_album"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.4" />

            <TextView
                android:id="@+id/title"
                style="@style/TextPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:maxLines="2"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/album_art"
                app:layout_constraintTop_toTopOf="@id/album_art" />


            <TextView
                android:id="@+id/released_on_prefix"
                style="@style/TextSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/released_on"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/album_art" />

            <TextView
                android:id="@+id/released_on"
                style="@style/TextSecondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/released_on_prefix"
                app:layout_constraintTop_toTopOf="@id/released_on_prefix" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/artist_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/released_on">

                <TextView
                    android:id="@+id/album_container_title"
                    style="@style/TextSectionHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/artists"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/artist_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/search_box_bg"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_album"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/album_container_title"
                    app:layout_constraintWidth_percent="0.4" />

                <TextView
                    android:id="@+id/artist_name"
                    style="@style/TextPrimary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:maxLines="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/artist_image"
                    app:layout_constraintTop_toTopOf="@id/artist_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>